# dkts-nuxt

./: .gitignore  alembic.ini  babel.cfg  babel_config.py  database.py  dependencies.py  loader.cjs  main.py  messages.pot  pyproject.toml
VueFrontend/: .gitignore  app.vue  nuxt.config.ts  package-lock.json  package.json
VueFrontend/assets/: main.scss
VueFrontend/components/: ActorCard.vue  AppFooter.vue  AppHeader.vue  PlayCard.vue
VueFrontend/components/actor/: ActorID.vue  ActorPlays.vue  ActorQuote.vue  FullBioModal.vue
VueFrontend/composables/: useFilters.ts
VueFrontend/layouts/: default.vue
VueFrontend/locales/: bg.ts  en.ts
VueFrontend/pages/: about.vue  events.vue  index.vue
VueFrontend/utils/: config.ts
api/v1/: __init__.py  api.py
api/v2/: actors_router.py  api.py  images_router.py  plays_router.py  search_router.py  seo_router.py  translations_router.py
api/v3/: api.py  calendar_router.py  email_router.py  festival_router.py  images_router.py  plays_router.py  search_router.py  translations_router.py  upload_router.py
cron/: birthday_reminder.sh
migrations/: env.py
migrations/versions/: 1b021a2a9a0e_added_translation_col_to_play_table.py  4f8d56e07d4f_changed_translation_to_translator_in_.py  64af634f4b33_changed_translation_to_translator_in_.py  bbd9aaac0f5e_renamed_play_slug_to_slug_in_.py  e442c820e817_changed_some_indices.py  e65020603943_test_migration.py  eb542349a520_changed_play_slug_in_playtranslations.py
models/: actor.py  employee.py  event.py  play.py
templates/mail/: application_form.html  birthday_reminder.html
(+36 files in other folders)
