[tool.poetry]
name = "dkts-nuxt"
version = "0.1.0"
description = ""
authors = ["StikyFingaz <79712152+StikyFingaz@users.noreply.github.com>"]
readme = "README.md"

# Export main dependencies to pip file. Including/excluding groups is possible. Check poetry's docs.
# poetry export -f requirements.txt --without-hashes --without-urls --with-credentials --output requirements.txt

[tool.poetry.dependencies]
python = "^3.11"
a2wsgi = "^1.10.4"
b2sdk = "^2.3.0"
brotli-asgi = "^1.4.0"
fastapi = "^0.111.0"
fastapi-babel = "^0.0.8"
fastapi-mail = "^1.3.1"
httpx = "^0.27.0"
pendulum = "^3.0.0"
pymage-size = "^1.7.1"
pymysql = "^1.1.1"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.9"
sqlmodel = "^0.0.18"
werkzeug = "^3.0.3"

[tool.poetry.group.dev.dependencies]
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
